kubernetes/infrastructure/prod/traefik/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://${HOST_TRAEFIK}.${DOMAIN}"
    gethomepage.dev/description: Traefik Dashboard - Ingress & Service Management
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/name: Traefik
    gethomepage.dev/widget.type: traefik
    gethomepage.dev/widget.url: "https://${HOST_TRAEFIK}.${DOMAIN}"
    gethomepage.dev/app: traefik  # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
spec:
  entryPoints:
    - websecure
  tls:
    secretName: traefik.${DOMAIN}
  routes:
    - kind: Rule
      match: Host(`${HOST_TRAEFIK}.${DOMAIN}`)
      middlewares:
        - name: oidc
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
    - kind: Rule
      match: Host(`${HOST_TRAEFIK}.${DOMAIN}`) &&  PathPrefix("/api")
      services:
        - name: api@internal
          kind: TraefikService
